Updated the quiz page-quiz.html, and add an intro section in each html file

--- a/about.html
+++ b/about.html
@@ -20,6 +20,9 @@
     </header>
 
     <main>
+        <section id="Intro">
+            <h1>Our goal</h1>
+        </section>
         <section id="about-content">
             <p>The original intention of this website is to help users recognize and avoid common online scams. Through interactive quizzes and educational resources, we aim to raise awareness about fraudulent schemes and empower individuals to protect themselves.</p>
             <img src="I will draw a logo here" alt="About Image" />
