--- a/quiz.html
+++ b/quiz.html
@@ -1,12 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Anti-Fraud Quiz</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Anti-Scam Awareness - quiz Page" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>© Anti-Scam Awareness - Home</title>
 </head>
 <body>
-    <h1>Anti-Fraud Quiz</h1>
-        <button type="submit">Submit</button>
-    </form>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home (Login)</a></li>
+                <li><a href="quiz.html">Quiz</a></li>
+                <li><a href="score.html">Scores</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+        <h1>Anti-Scam Awareness</h1>
+    </header>
+
+
+    <main>
+        <section id="intro">
+            <h2>Test Your Knowledge</h2>
+            <p>Answer the following questions to test your understanding of common online scams and how to avoid them.</p>
+        </section>
+
+        <section id="example quiz quiz-questions">
+            <form action="#" method="POST">
+                <h3>Question 1: Which of the following is a common sign of a phishing email?</h3>
+                <label><input type="radio" name="q1" value="A"> Suspicious links and requests for personal info.</label><br>
+                <label><input type="radio" name="q1" value="B"> Proper spelling and grammar throughout.</label><br>
+                <label><input type="radio" name="q1" value="C"> Email only from known contacts.</label><br>
+                
+                <h3>Question 2: To protect your password, you should:</h3>
+                <label><input type="radio" name="q2" value="A"> Write it on a sticky note under your keyboard.</label><br>
+                <label><input type="radio" name="q2" value="B"> Use a unique, strong password for each account.</label><br>
+                <label><input type="radio" name="q2" value="C"> Share it with friends you trust.</label><br>
+
+                <button type="submit">Submit Answers</button>
+            </form>
+        </section>
+
+    </main>
+
+    <footer>
+        <p><a href="https://github.com/StevenChengCCC/CS260">Our GitHub Repository</a></p>
+    </footer>
 </body>
 </html>
