--- a/scores.html
+++ b/scores.html
@@ -20,6 +20,9 @@
     </header>
 
     <main>
+        <section id="Intro">
+            <h1>Hall of Frame!!!</h1>
+        </section>
         <section id="database-placeholder">
             <h2>Database Data</h2>
             <p>This section will display user results and dates retrieved from the database.</p>
