--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Anti-Scam Awareness - about" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>© Anti-Scam Awareness - About</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home (Login)</a></li>
                 <li><a href="quiz.html">Quiz</a></li>
-                <li><a href="score.html">Scores</a></li>
+                <li><a href="Scores.html">Scores</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
