--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Anti-Scam Awareness - Login Page" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>© Anti-Scam Awareness - Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
