--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Anti-Scam Awareness - about" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>© Anti-Scam Awareness - About</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 <body>
     <header>
