--- a/src/about.html
+++ b/src/about.html
@@ -26,7 +26,7 @@
         </section>
         <section id="about-content">
             <p>The original intention of this website is to help users recognize and avoid common online scams. Through interactive quizzes and educational resources, we aim to raise awareness about fraudulent schemes and empower individuals to protect themselves.</p>
-            <img src="I will draw a logo here" alt="About Image" />
+            <img src="1.png" alt="About Image" />
         </section>
     </main>
 
